Reportes, titulo, fin

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
 {% block content %}
 <main role="main" class="container p-5">
     <div class="p-5 bg-light border  rounded-3">
-        <h1>Proyecto 1 OLC2</h1>
+        <h1>Proyecto 2 OLC2</h1>
         <p>
             Intérprete sencillo del lenguaje Julia
+        </p>
+        <p>
+            Generador de codigo en 3 direcciones
         </p>
         <small class="text-primary">Por José Marcos García Olmino</small>
     </div>
